# commit-wisp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: commit-wisp.toml  prompt.txt
packaging/homebrew/: commit-wisp.rb.in
scripts/: install.ps1  install.sh  render-homebrew-formula.sh
src/: app.rs  cli.rs  compress.rs  config.rs  git.rs  lib.rs  main.rs  prompt.rs  provider.rs  secret.rs  security.rs  tui.rs
tests/: cli_smoke.rs  cli_workflows.rs  core_behaviour.rs  git_flow.rs  install_script.rs  provider_http.rs
