[package]
name = "commit-wisp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Reviewable, token-aware AI commit messages from staged changes"
license = "MIT"
keywords = ["git", "commit", "llm", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
crossterm = "0.29"
directories = "6.0"
keyring = "3.6"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
